@@ -1,24 +1,32 @@
 {
-  "type": "minecraft:crafting_shaped",
-  "pattern": [
-    "po",
-    "dr"
-  ],
-  "key": {
-    "p": {
-      "item": "minecraft:paper"
+  "parent": "minecraft:recipes/root",
+  "rewards": {
+    "recipes": [
+      "xnet:connector_upgrade"
+    ]
+  },
+  "criteria": {
+    "pearl": {
+      "trigger": "minecraft:inventory_changed",
+      "conditions": {
+        "items": [
+          {
+            "item": "minecraft:ender_pearl"
+          }
+        ]
+      }
     },
-    "r": {
-      "item": "minecraft:redstone"
-    },
-    "d": {
-      "item": "minecraft:diamond"
-    },
-    "o": {
-      "tag": "forge:ender_pearls"
+    "has_the_recipe": {
+      "trigger": "minecraft:recipe_unlocked",
+      "conditions": {
+        "recipe": "xnet:connector_upgrade"
+      }
     }
   },
-  "result": {
-    "item": "xnet:connector_upgrade"
-  }
+  "requirements": [
+    [
+      "pearl",
+      "has_the_recipe"
+    ]
+  ]
 }
