@@ -5,6 +5,11 @@
     "xnet:netcable_yellow",
     "xnet:netcable_green",
     "xnet:netcable_red",
+    "xnet:netcable_routing",
+    "xnet:netcable_blue",
+    "xnet:netcable_yellow",
+    "xnet:netcable_green",
+    "xnet:netcable_red",
     "xnet:netcable_routing"
   ]
 }
